metadata/force-app/main/default/objects/Opportunity_Competitors__c/Opportunity_Competitors__c.object-meta.xml
<CustomObject>
    <label>Opportunity Competitors</label>
    <nameField>
        <displayFormat>Competitor-{000000}</displayFormat>
        <label>Opportunity Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>