metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>If competitor is not known please choose &quot;Unknown&quot; for competitor name. 
If competitor is not listed, please select other and add name below.</inlineHelpText>
    <label>Competitor</label>
    <referenceTo>Competitors__c</referenceTo>
    <relationshipLabel>Opportunity Competitors</relationshipLabel>
    <relationshipName>Competitor_Battles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>