metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Competitor_name_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Competitor_name_if_Other__c</fullName>
    <description>If the competitor is not listed above, please select &apos;Other&apos; and include the name here.</description>
    <inlineHelpText>If the competitor is not listed above, please select &apos;Other&apos; and include the name here.</inlineHelpText>
    <label>Competitor name if &apos;Other&apos;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>