metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Derived_Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Derived_Competitor_Name__c</fullName>
    <description>Formula field to aid the Opportunity Check Readiness - Lost Flow. Currently DOES NOT need to be added to page layouts.</description>
    <formula>IF( ISBLANK( Competitor_name_if_Other__c ) ,  Competitor__r.Name ,  Competitor_name_if_Other__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Derived Competitor Name</label>
    <type>Text</type>
</CustomField>