metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Free text area to give more details on the competitor.</description>
    <inlineHelpText>Free text area to give more details on the competitor.</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>