metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Did_this_competitor_win_the_account__c.field-meta.xml
<CustomField>
    <fullName>Did_this_competitor_win_the_account__c</fullName>
    <description>Did this competitor win the account?</description>
    <inlineHelpText>Did this competitor win the account?</inlineHelpText>
    <label>Did this competitor win the account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>