metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Is_this_the_current_tool_in_use__c.field-meta.xml
<CustomField>
    <fullName>Is_this_the_current_tool_in_use__c</fullName>
    <description>Is this competitor the current system in use?</description>
    <inlineHelpText>Is this competitor the current system in use?</inlineHelpText>
    <label>Is this the current tool in use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>