metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Product_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Reason__c</fullName>
    <description>Product loss reason is required when Product Capabilities is set as the loss reason.</description>
    <inlineHelpText>Product loss reason is required when Product Capabilities is set as the loss reason.</inlineHelpText>
    <label>Product Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAM</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Digital Brand Templates</fullName>
            </value>
            <value>
                <fullName>Print Brand Templates</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>API/Integrations</fullName>
            </value>
            <value>
                <fullName>File Type Support</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>AI Capabilities</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Configurability</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Language support</fullName>
            </value>
            <value>
                <fullName>Asset tracking</fullName>
            </value>
            <value>
                <fullName>Usability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>