metadata/force-app/main/default/objects/Opportunity_Competitors__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Please indicate why the opportunity was lost to the competitor.</description>
    <inlineHelpText>Please indicate why the opportunity was lost to the competitor.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Lost</fullName>
            </value>
            <value>
                <fullName>Analyst Feedback</fullName>
            </value>
            <value>
                <fullName>Blocker - Never got to Power/Key Stakeholders</fullName>
            </value>
            <value>
                <fullName>Cheaper Price/Better Offer</fullName>
            </value>
            <value>
                <fullName>Contract Terms</fullName>
            </value>
            <value>
                <fullName>Customer References</fullName>
            </value>
            <value>
                <fullName>Existing Relationship with Competitor</fullName>
            </value>
            <value>
                <fullName>Integrations Support</fullName>
            </value>
            <value>
                <fullName>Legal/Payment Terms Blocker</fullName>
            </value>
            <value>
                <fullName>Other (explain in &quot;Detail&quot; field)</fullName>
            </value>
            <value>
                <fullName>Product Capabilities within DAM</fullName>
            </value>
            <value>
                <fullName>Service Offering</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>