metadata/force-app/main/default/objects/Opportunity_Competitors__c/validationRules/Details_required_with_loss_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Details_required_with_loss_reason</fullName>
    <active>true</active>
    <description>Details must be filled out if loss reason is filled out</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Reason__c,&quot;&quot;)),ISBLANK(Details__c))</errorConditionFormula>
    <errorMessage>When a loss reason is selected, please fill out the details section.</errorMessage>
</ValidationRule>