metadata/force-app/main/default/objects/Opportunity_Competitors__c/validationRules/Is_this_current_tool_in_use_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_this_current_tool_in_use_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(TEXT(Is_this_the_current_tool_in_use__c))
)</errorConditionFormula>
    <errorDisplayField>Is_this_the_current_tool_in_use__c</errorDisplayField>
    <errorMessage>Please fill in this field before adding a new competitor.</errorMessage>
</ValidationRule>