metadata/force-app/main/default/objects/Opportunity_Competitors__c/validationRules/Product_Reason_Filled_When_Reason_DAM.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Reason_Filled_When_Reason_DAM</fullName>
    <active>true</active>
    <description>When the Reason is &quot;Product Capabilities within DAM&quot;, then the field &quot;Product Reason&quot; should be filled in.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Reason__c, &apos;Product Capabilities within DAM&apos;),
ISBLANK(TEXT(Product_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Product_Reason__c</errorDisplayField>
    <errorMessage>A product reason is required when loss reason is &quot;Product Capabilities within DAM&quot;.</errorMessage>
</ValidationRule>