metadata/force-app/main/default/objects/Opportunity_Competitors__c/validationRules/Select_a_loss_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_a_loss_reason</fullName>
    <active>true</active>
    <description>If competitor won the deal, a loss reason is required</description>
    <errorConditionFormula>AND(ISPICKVAL(Did_this_competitor_win_the_account__c,&quot;Yes&quot;),ISPICKVAL(Reason__c,&quot;&quot;))</errorConditionFormula>
    <errorMessage>A loss reason is required if this competitor won the deal.</errorMessage>
</ValidationRule>